--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -25,10 +25,7 @@
           <script src="app/controllers/managementCtrl.js"></script>
 
       <!-- Angular Services -->
-    <script src="app/services/wishingS
-
-
-    ervices.js"></script>
+    <script src="app/services/wishingServices.js"></script>
     <!-- <script src="app/services/loginservices.js"></script>
 
      <!-- Cascade Style Sheets -->
@@ -39,7 +36,7 @@
     <title>Wishes</title>
 </head>
 
-<body ng-app="wishApp">
+<body ng-app="wishApp" ng-controller="createCtrl as register">
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
@@ -86,6 +83,27 @@
 
 <!-- Showing differnt canvas -->
 <div class="container">
+    <form id="login-form" ng-submit="register.regwish(regdata);" role="form" style="display: block;">
+        <div class="form-group">
+            <input type="text" name="messages" id="messages" tabindex="1" class="form-control" placeholder="Message" ng-model="register.regdata.messages">
+        </div>
+        <div class="form-group">
+            <input type="text" name="views" id="views" tabindex="1" class="form-control" placeholder="views" ng-model="register.regdata.views">
+        </div>
+        <div class="form-group">
+            <input type="text" name="counter" id="counter" tabindex="1" class="form-control" placeholder="counter" ng-model="register.regdata.counter">
+        </div>
+        <div class="form-group">
+            <input type="text" name="choice" id="choice" tabindex="1" class="form-control" placeholder="choice" ng-model="register.regdata.choice">
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                </div>
+            </div>
+        </div>
+    </form>
     <div ng-view ></div>
 </div>
 
