--- a/public/app/views/type/type1.html
+++ b/public/app/views/type/type1.html
@@ -2,29 +2,14 @@
 <head>
     <meta name="author" content="Ramakrishna V">
     <title>Happy Diwali - Lantern</title>
-    <link rel="image_src" href="../diwali.jpg" >
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link href="public/assets/css/fire.css" rel="stylesheet" type="text/css">
-    <link href="public/assets/css/second.css" rel="stylesheet" type="text/css">
+    <link rel="image_src"  href="../diwali.jpg" >
+    <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
+    <link href="../../../assets/css/fire.css" rel="stylesheet" type="text/css">
+    <link href="../../../assets/css/second.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-        // $(document).ready(function(){
-        //      $("#lantern").mouseover(function(){
-        //          $(".clouds").css("display", "none");
 
-
-        //      });
-        //      $("#lantern").mouseout(function(){
-        //          $("#stars").css("display", "block");
-        //          $(".clouds").css("display", "block");
-
-        //      });
-        // });
-
-    </script>
     <script type="text/javascript" src="https://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "fdb4a23c-1f99-414a-9fef-bc2e637bfd4e", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-    <script src="public/assets/js/fire.js" type="text/javascript"></script>
+    <script src="../../../assets/js/fire.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -80,20 +65,7 @@
 
 </section>
 <section>
-    <!-- <ul class="city">
-    <li> </li>
-    <li></li>
-    <li> </li>
-    <li></li>
-    <li> </li>
-    <li></li>
-    <li> </li>
-    <li></li>
-    <li> </li>
-    <li></li>
-    <li> </li>
-    <li></li>
-    </ul> -->
+
     <div class="wall">
         <div class="wall-outer"></div>
         <div class="textbg">
