--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -25,9 +25,11 @@
 
       <!-- Angular Services -->
     <script src="app/services/wishingServices.js"></script>
+    <script src="assets/js/light/garland.js" type="text/javascript"></script> 
     <!-- <script src="app/services/loginservices.js"></script>
 
      <!-- Cascade Style Sheets -->
+     <link rel="stylesheet" href="assets/css/light/garland.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -36,7 +38,9 @@
 </head>
 
 <body ng-app="wishApp" ng-controller="createCtrl as register">
-
+<div id="garland" class="garland_4">
+  <div id="nums_1">1</div>
+</div>
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
