--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -60,7 +60,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="/createwish">Create Wish</a></li>
-                <li><a href="/views">No of views</a></li>
+                <li><a href="/type1">No of views</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         More <span class="caret"></span></a>
