--- a/public/app/views/type/firework.html
+++ b/public/app/views/type/firework.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Fire works</title>
-<link href="../../../assets/css/firework/firework.css" type="text/css">
-<script src="../../../assets/js/firework/firework.js" type="text/javascript">
+<link href="assets/css/firework/firework.css" type="text/css">
+<script src="assets/js/firework/firework.js" type="text/javascript">
 </head>
 <div class="wrapper">
   <h1>Here we go again!</h1>
