--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -29,7 +29,7 @@
     <!-- <script src="app/services/loginservices.js"></script>
 
      <!-- Cascade Style Sheets -->
-     <link rel="stylesheet" href="assets/css/light/garland.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/light/garland.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -39,7 +39,7 @@
 
 <body ng-app="wishApp" ng-controller="createCtrl as register">
 <div id="garland" class="garland_4">
-  <div id="nums_1">1</div>
+  <div id="nums_1"1</div>
 </div>
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
@@ -55,34 +55,34 @@
 
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- Collect he nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="/createwish">Create Wish</a></li>
                 <li><a href="/type1">No of views</a></li>
+
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         More <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" >About</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Connect</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Help</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Feedback</a></li>
-                    </ul>
+                         <ul class="dropdown-menu">
+                            <li><a href="#" >About</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Connect</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Help</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Feedback</a></li>
+                        </ul>
                 </li>
             </ul>
 
-           <!-- for showing wisher name -->
-           <!-- <a href="/profile" ng-show="!getin.isloggedin"> <p class="navbar-text navbar-right">{{getin.username}}</p></a> -->
-        </div><!-- /.navbar-collapse -->
+           </div><!-- /.navbar-collapse -->
     </div><!-- container-fluid -->
 </nav>
-<div class="container">
-    <div ng-view ></div>
+<div >
+       <div ng-view ></div>
 </div>
 
 
